--- a/create.html
+++ b/create.html
@@ -180,6 +180,9 @@
         return;
       }
 
+      // ✅ 등록하기 버튼 클릭 시 안내 팝업
+      alert("관리자 승인 후 정식 등록 됩니다.\n프로젝트.PAW 단톡방으로 찾아와 주세요.");
+
       submitBtn.classList.add('disabled');
       submitBtn.textContent='업로드 중...';
 
