--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
     <p>단톡방과 SNS에는 매일 구조 이야기가 올라왔습니다.</p>
     <p>용기 있는 구조 뒤에는 늘 병원비라는 <strong>현실</strong>이 있었습니다.</p>
     <p>누구는 책임을 짊어지고, 누구는 도와주고 싶다고 말했습니다.</p>
-    <p>Project.PAW는 지금도 그 마음들을 <strong>이어주고 싶습니다.</strong></p>
+    <p>Project.PAW는 그 마음들을 <strong>이어주고 싶습니다.</strong></p>
 
     <h2>추구하는 본질</h2>
     <p>Project.PAW에서 <strong>따뜻한 마음이 흩어지지 않고 이어지길</strong> 실험합니다.</p>
